// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`padding renders 0 1`] = `
Array [
  .c0 {
  padding: 0;
}

<div
    className="c0"
  />,
  .c0 {
  padding: 0;
}

<div
    className="c0"
  />,
  .c0 {
  padding: 0;
}

<div
    className="c0"
  />,
  .c0 {
  padding: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`padding renders function 1`] = `
Array [
  .c0 {
  padding: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  padding: has;
}

<div
    className="c0"
  />,
  .c0 {
  padding: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  padding: has;
}

<div
    className="c0"
  />,
]
`;

exports[`padding renders invalid theme path 1`] = `
Array [
  .c0 {
  padding: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  padding: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  padding: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  padding: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`padding renders negative number 1`] = `
Array [
  .c0 {
  padding: -54881px;
}

<div
    className="c0"
  />,
  .c0 {
  padding: -54881px;
}

<div
    className="c0"
  />,
  .c0 {
  padding: -42365px;
}

<div
    className="c0"
  />,
  .c0 {
  padding: -42365px;
}

<div
    className="c0"
  />,
]
`;

exports[`padding renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    padding: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    padding: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    padding: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    padding: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    padding: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    padding: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    padding: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    padding: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    padding: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    padding: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    padding: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    padding: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    padding: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    padding: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    padding: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    padding: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`padding renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    padding: July;
  }
}

@media April {
  .c0 {
    padding: August;
  }
}

@media January {
  .c0 {
    padding: September;
  }
}

@media April {
  .c0 {
    padding: November;
  }
}

@media June {
  .c0 {
    padding: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    padding: July;
  }
}

@media April {
  .c0 {
    padding: August;
  }
}

@media January {
  .c0 {
    padding: September;
  }
}

@media April {
  .c0 {
    padding: November;
  }
}

@media June {
  .c0 {
    padding: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    padding: January;
  }
}

@media April {
  .c0 {
    padding: December;
  }
}

@media January {
  .c0 {
    padding: April;
  }
}

@media April {
  .c0 {
    padding: May;
  }
}

@media June {
  .c0 {
    padding: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    padding: January;
  }
}

@media April {
  .c0 {
    padding: December;
  }
}

@media January {
  .c0 {
    padding: April;
  }
}

@media April {
  .c0 {
    padding: May;
  }
}

@media June {
  .c0 {
    padding: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`padding renders postitive number 1`] = `
Array [
  .c0 {
  padding: 54881px;
}

<div
    className="c0"
  />,
  .c0 {
  padding: 54881px;
}

<div
    className="c0"
  />,
  .c0 {
  padding: 42365px;
}

<div
    className="c0"
  />,
  .c0 {
  padding: 42365px;
}

<div
    className="c0"
  />,
]
`;

exports[`padding renders string 1`] = `
Array [
  .c0 {
  padding: July;
}

<div
    className="c0"
  />,
  .c0 {
  padding: July;
}

<div
    className="c0"
  />,
  .c0 {
  padding: June;
}

<div
    className="c0"
  />,
  .c0 {
  padding: June;
}

<div
    className="c0"
  />,
]
`;

exports[`padding renders valid theme path 1`] = `
Array [
  .c0 {
  padding: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  padding: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  padding: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  padding: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
